# Pribe-Beuckelman-1998

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
mk_movie/: AP.sh  ap.eps  fname_convert.sh  im0.sh.org  in  mkmov.sh  run.sh  temp  tmp1
mkdata_test/: AP.sh  Ical.sh  Ik1.sh  Ikr.sh  Iks.sh  Inak.sh  Incx.sh  Ito.sh  PB  ap.eps  cai.sh  ik1.eps  iks.eps  in  incx.eps  ito.eps  nai.sh  sr.sh  temp
src/: eular.c  eventloop.c  exptable.c  input_para.c  ion_current.c  mem.c  pb.c  syspara.h  system.c  val_constants.c  win_out.c
